[package]
name = "rpki-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.26", features = ["json"] }
rmcp = { version = "0.11.0", features = ["transport-io"] }
schemars = "1.1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
serde = "1.0.228"
rpki = { version = "0.19.1", features = ["repository"] }
